--- a/pom.xml
+++ b/pom.xml
@@ -404,9 +404,10 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-				<url>http://localhost:8085/manager/text</url>
+				<url>http://ec2-3-83-245-121.compute-1.amazonaws.com:8085/manager/text</url>
                     <server>apache-tomcat</server>
-                   
+                   	<username>admin</username>
+			<password>admin</password>
                     <path>/petclinic</path>
                 </configuration>
             </plugin>
@@ -527,11 +528,11 @@
 <artifactId>tomcat7-maven-plugin</artifactId> 
 <version>2.2</version> 
 <configuration> 
-<url>http://localhost:8085/manager/text</url> 
+<url>http://ec2-3-83-245-121.compute-1.amazonaws.com:8085/manager/text</url> 
 <server>apache-tomcat</server> 
 <username>admin</username>
 <password>admin</password>
-<path>/my-webapp</path> 
+<path>/petclinic</path> 
 </configuration> 
 </plugin>
                     <plugin>
