--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,14 @@
-# Required metadata
-sonar.projectKey=java-sonar-runner-simple
-sonar.projectName=Simple Java project analyzed with the SonarQube Runner
+Required metadata
+sonar.projectKey=mykey
+sonar.projectName=mykey
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=/var/lib/jenkins/workspace/sonarqubescanner
 
 # Language
 sonar.language=java
-
+sonar.java.source=1.8
+sonar.java.binaries=.
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
