--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,11 @@
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
+		<plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>sonar-maven-plugin</artifactId>
+<version>3.0.2</version>
+</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
